--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -9,6 +9,7 @@
   <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net40" />
   <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
+  <package id="jQuery.jqGrid" version="4.4.4" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.1" targetFramework="net40" />
