--- a/src/UnitTests/packages.config
+++ b/src/UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
@@ -15,5 +16,6 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Unity" version="2.1.505.2" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
 </packages>
