--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -74,6 +74,9 @@
         <add connectionStringName="MembershipConnection" applicationName="MyCoolApplication" name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </providers>
     </sessionState>
+    <customErrors mode="On" defaultRedirect="/ServerError">
+      <error statusCode="404" redirect="/NotFound" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -89,6 +92,12 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/NotFound" responseMode="ExecuteURL" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <error statusCode="500" path="/ServerError" responseMode="ExecuteURL" />
+    </httpErrors>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
