--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -13,6 +13,7 @@
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.1" targetFramework="net40" />
+  <package id="MagicalUnicornMvcErrorToolkit" version="1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers" version="1.1" targetFramework="net40" />
@@ -41,6 +42,7 @@
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
