* moved files to correct folders

--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -209,15 +209,18 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SGAccountController.cs" />
+    <Compile Include="Core\Components\CoreController.cs" />
+    <Compile Include="Core\Policies\DenyAccessPolicyViolationHandler.cs" />
+    <Compile Include="Core\Policies\LocalOnlyPolicy.cs" />
     <Compile Include="DI\CommonConventions.cs" />
     <Compile Include="DI\IDependencyInjectionContainer.cs" />
     <Compile Include="DI\InjectableControllerFactory.cs" />
     <Compile Include="DI\InjectableDependencyResolver.cs" />
     <Compile Include="DI\Unity\ContainerExtensions\MvcSiteMapProviderContainerExtension.cs" />
     <Compile Include="DI\Unity\UnityDependencyInjectionContainer.cs" />
-    <Compile Include="Helpers\FluentSecurity\SecurityHelper.cs" />
-    <Compile Include="Helpers\FluentSecurity\DefaultPolicyViolationHandler.cs" />
-    <Compile Include="Helpers\MvcSiteMap\MyCustomVisibilityProvider.cs" />
+    <Compile Include="Core\Providers\SecurityProvider.cs" />
+    <Compile Include="Core\Policies\DefaultPolicyViolationHandler.cs" />
+    <Compile Include="Core\Providers\MyCustomVisibilityProvider.cs" />
     <Compile Include="Mailers\IPasswordResetMailer.cs" />
     <Compile Include="Mailers\Models\MailerModel.cs" />
     <Compile Include="Mailers\PasswordResetMailer.cs" />
