* registered repository & services in IOC * a samle with fluentvalidatin mocking

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\My.Framework\packages.config" />
   <repository path="..\src\Core\packages.config" />
+  <repository path="..\src\Infrastructure\packages.config" />
   <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
   <repository path="..\src\My.Repository.EF\packages.config" />
