--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -35,6 +35,9 @@
     <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.5.0.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation">
+      <HintPath>..\..\packages\FluentValidation.5.0.0.1\lib\Net40\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="GenericRepository">
       <HintPath>..\..\packages\GenericRepository.0.3.1-pre01\lib\net40\GenericRepository.dll</HintPath>
     </Reference>
@@ -64,6 +67,10 @@
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\OrderDetail.cs" />
+    <Compile Include="Handlers\Genre\HasPermissionToGet.cs" />
+    <Compile Include="Handlers\Genre\CanBeAdded.cs" />
+    <Compile Include="IValidator.cs" />
+    <Compile Include="MvcDemosEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GenreService.cs" />
     <Compile Include="Services\IGenreService.cs" />
