--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" requireReinstallation="True" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
