--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" requireReinstallation="True" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net40" />
