--- a/src/UnitTests/packages.config
+++ b/src/UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
+  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
