--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
-  <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net40" />
+  <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net45" />
   <package id="GenericRepository" version="0.3.1-pre01" targetFramework="net40" />
   <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net40" />
   <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net40" />
@@ -20,7 +21,7 @@
   <package id="Microsoft.AspNet.Providers" version="1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
@@ -37,7 +38,7 @@
   <package id="MvcSiteMapProvider.MVC4.DI.Unity" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC4.DI.Unity.Modules" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.4.5" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
@@ -45,5 +46,5 @@
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
   <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
