--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -134,14 +134,13 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
-    </assemblyBinding>
+    </assemblyBinding>    
   </runtime>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MvcDemos-20131116202707;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
     <add name="MyCoolEntities" connectionString="metadata=res://*/MyCoolEntities.csdl|res://*/MyCoolEntities.ssdl|res://*/MyCoolEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="MembershipConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="MvcDemosContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcDemosContext-20131229143614; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcDemosContext-20131229143614.mdf" providerName="System.Data.SqlClient" />
-    <add name="MvcApplication3Context" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcApplication3Context-20131229145725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcApplication3Context-20131229145725.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="MvcApplication3Context" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcApplication3Context-20131229145725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcApplication3Context-20131229145725.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
