--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -5,11 +5,12 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
-  <package id="FluentValidation" version="5.0.0.1" targetFramework="net40" />
+  <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net45" />
   <package id="GenericRepository" version="0.3.1-pre01" targetFramework="net40" />
   <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net40" />
   <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net40" />
+  <package id="html5shiv" version="0.1.0.8" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.jqGrid" version="4.4.4" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
@@ -43,6 +44,7 @@
   <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
+  <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net45" />
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
   <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
