EntityFramework add in my.repository.ef project

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\src\Infrastructure\packages.config" />
   <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
+  <repository path="..\src\My.Repository.EF\packages.config" />
   <repository path="..\src\UnitTests\packages.config" />
 </repositories>
